--- a/.github/ISSUE_TEMPLATE/formulario-refrigeracao.yml
+++ b/.github/ISSUE_TEMPLATE/formulario-refrigeracao.yml
@@ -1,4 +1,4 @@
-name: Nova Tarefa do Projeto
+name: Instalação de Ar Condicionado
 description: Use este formulário para adicionar algo ao nosso Project.
 title: "[INSTALAÇÃO]: "
 body:
