--- a/.github/ISSUE_TEMPLATE/formulario-refrigeracao.yml
+++ b/.github/ISSUE_TEMPLATE/formulario-refrigeracao.yml
@@ -1,16 +1,48 @@
 name: Instalação de Ar Condicionado
 description: Use este formulário para adicionar algo ao nosso Project.
-title: "[INSTALAÇÃO]: "
+title: "[INSTALAÇÃO]"
 body:
+  - type: checkboxes
+  id: tipos_instalacao
+  label: Que tipo de instalação será feita?
+  options:
+    - label: Split
+    required: true
+    - label: Piso Teto
+    - label: Cassete
   - type: input
-    id: task_name
-    attributes:
-      label: Nome da Tarefa
-      placeholder: O que precisa ser feito?
-    validations:
-      required: true
-  - type: textarea
-    id: description
-    attributes:
-      label: Detalhes da Demanda
-      description: Explique o que deve ser entregue.
+  id: endereco
+  attributes:
+    label: Endereço do Cliente:
+  validations:
+    required: true
+  - type: input
+  id: telefone
+  attributes:
+    label: Número de Telefone do Cliente:
+  validations:
+    required: true
+  - type: input
+  id: email
+  attributes:
+    label: Endereço de E-mail do Cliente:
+  validations:
+    required: true
+  - type: input
+  id: valor
+  attributes:
+    label: Valor Cobrado do Cliente:
+  validations:
+    required: true
+  # - type: 
+  #   id: task_name
+  #   attributes:
+  #     label: Nome da Tarefa
+  #     placeholder: O que precisa ser feito?
+  #   validations:
+  #     required: true
+  # - type: textarea
+  #   id: description
+  #   attributes:
+  #     label: Detalhes da Demanda
+  #     description: Explique o que deve ser entregue.
