--- a/.github/ISSUE_TEMPLATE/formulario-instalacao-camera-fria.yml
+++ b/.github/ISSUE_TEMPLATE/formulario-instalacao-camera-fria.yml
@@ -1,6 +1,6 @@
 name: Instalação de Câmera Fria
 description: Use este formulário para adicionar algo ao nosso Project.
-title: "[INSTALAÇÃO DE CÂMERA FRIA]: "
+title: "[INSTALAÇÃO DE CÂMERA FRIA]"
 body:
   - type: input
     id: endereco
